<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_tv_series"
    android:background="@color/white"
    tools:context=".ui.home.tvseries.TvSeriesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tvseries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recycler_item_grid" />

    <include
        android:id="@+id/include_no_internet"
        layout="@layout/placeholder_no_internet" />

</androidx.constraintlayout.widget.ConstraintLayout>