<resources>
    <string name="app_name">Movie Now</string>
    <string name="movies">MOVIES</string>
    <string name="tv_series">TV SERIES</string>
    <string name="bg_header_gradient">bg_header_gradient</string>
    <string name="poster">Poster</string>
    <string name="detail_poster_header">Detail Poster Header</string>
    <string name="button_back_from_detail">Button Back From Detail</string>
    <string name="main_background">Main Background</string>
    <string name="overview">Overview</string>
    <string name="text_desc">Wonder Woman comes into conflict with the Soviet Union during the Cold War in the 1980s and finds a formidable foe by the name of the Cheetah.</string>
    <string name="userscore">User Score</string>
    <string name="from_themoviedb_org">themoviedb.org</string>
    <string name="text_popularity">Popularity</string>
    <string name="runtime">%d Minutes</string>
    <string name="image_cast">Image Cast</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_logo">No Internet Logo</string>
    <string name="enable_connection">Enable your internet connection to access this part of the application.</string>
</resources>